# xiaohongshu-viral-note-agent-skill

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  README_EN.md  SECURITY.md  SKILL.md  docker-compose.yml  pyproject.toml
assets/: accounts.yaml  creator_studio_selectors.yaml  plugin-trust.example.json  tenant-policy.example.yaml
contracts/: a2a-agent-card.json  mcp-tool-groups.json  mcp-tools.json  openapi.json  openapi.yaml
evals/: manifest.json  run_evals.py
examples/: account_analytics.json  authorized_notes.json
migrations/: 0001_initial.sql  0002_high_concurrency_indexes.sql  0003_enterprise_v5.sql  README.md
references/: account-weight.md  ai-labeling.md  auto-publishing.md  browser-authentication.md  compliance-rules.md  content-generation.md  content-intelligence-v5.1.md  distributed-consistency.md  enterprise-governance.md  enterprise-identity.md  high-concurrency.md  hot-ranking.md  mcp-a2a-streaming.md  model-routing.md  operations-loop.md  research-protocol.md  self-contained-runtime.md  supply-chain-security.md  task-routing.md  verification-workflow.md
schemas/: account-analytics.schema.json  account-profile.schema.json  account-weight-snapshot.schema.json  account-weight.schema.json  asset-record.schema.json  auth-session.schema.json  bandit-decision.schema.json  content-calendar-item.schema.json  content-experiment.schema.json  content-series.schema.json  creation-bundle.schema.json  delivery-package.schema.json  enterprise-approval.schema.json  enterprise-audit-event.schema.json  enterprise-budget.schema.json  enterprise-group.schema.json  enterprise-plugin-manifest.schema.json  enterprise-tenant-policy.schema.json  enterprise-tenant.schema.json  enterprise-usage-reservation.schema.json  enterprise-user.schema.json  evidence-reference.schema.json  experiment-analysis.schema.json  generate-request.schema.json  hot-note.schema.json  hot-notes-report.schema.json  performance-attribution.schema.json  post-publish-sync-task.schema.json  publish-approval.schema.json  publish-draft.schema.json  (+5 more)
(+327 files in other folders)
